--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "dhruv983.github.io",
+  "name": "My_portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Dhruv983.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -16,8 +15,6 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
